--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "devStart": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,11 @@
     "axios": "^1.6.5",
     "cron": "^3.1.6",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.4",
     "puppeteer": "^19.11.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
