--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "devStart": "nodemon index.js"
+    "devStart": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
