--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
     "cron": "^3.1.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
