--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
-    "puppeteer": "^19.11.1"
+    "puppeteer": "19.11.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
